src/objects/SurveyResponse__c.object
<CustomObject>
    <description>SFDC1-254: Customer Care - Survey Response Object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-6010: account id of responded</description>
        <inlineHelpText>Account related to the Survey Response.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlertComments__c</fullName>
        <description>SFDC1-6010: validation: If alert status is resolved, the alert may not be null</description>
        <inlineHelpText>Please enter details on the Alert follow-up and resolution.</inlineHelpText>
        <label>Alert Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertStatus__c</fullName>
        <description>SFDC1-6010: If alert type is not null then status is required. Should be populated as new on create when alert type is not null</description>
        <inlineHelpText>When Alert type is not null, a status must be provided identifying the progress of the follow-up of the Alert.</inlineHelpText>
        <label>Alert Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlertType__c</fullName>
        <description>SFDC1-6010: Hot Alert, Commendation, can be null. The survey team can decide what triggers this and we can build workflows on this value. A workflow will trigger an email based on this value. For Phase 1 we are only expecting this value to be sent as hot alert or null</description>
        <inlineHelpText>Identifies if the survey has been identified as a response needing action by the</inlineHelpText>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Hot Alert</fullName>
                </value>
                <value>
                    <fullName>Commendation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CESScore__c</fullName>
        <description>SFDC1-6010: Carlos&apos; team to calculate and present as a whole number</description>
        <inlineHelpText>Calculated Customer Engagement Score.  This score is provided by the survey team on a scale from 0-7.</inlineHelpText>
        <label>CES Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseClosedDate__c</fullName>
        <description>SFDC1-1895: Formula field to populate Case Closed Date</description>
        <formula>Case__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the surveyed Case was Closed.</inlineHelpText>
        <label>Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseOwnerEmailId__c</fullName>
        <description>SFDC1-1895: Case Owner Manager&apos;s Email Id</description>
        <inlineHelpText>Email address of the Owner of the surveyed Case.</inlineHelpText>
        <label>Case Owner Manager Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <description>SFDC1-1895: Formula field to populate Case Owner</description>
        <formula>Case__r.Owner:User.FirstName +&apos; &apos;+ Case__r.Owner:User.LastName</formula>
        <inlineHelpText>Owner of the surveyed Case.</inlineHelpText>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-254: populated and required when type is Customer Care, else null and read only</description>
        <inlineHelpText>Case related to this Survey Response.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment10__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment1__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment2__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-254 : Comments. Any other comments to be provided in the Survey</description>
        <inlineHelpText>Verbatim open comments from the survey.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>SFDC1-1895: Formula field to populate Contact Email</description>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>Contact&apos;s Email Id</inlineHelpText>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-254: contactid of responded</description>
        <inlineHelpText>Contact related to the Survey Response.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributionList1__c</fullName>
        <defaultValue>$Label.DistributionList1</defaultValue>
        <description>SFDC1-1895: Distribution list 1 to send email alert</description>
        <inlineHelpText>Initial mailing list to receive Alert emails.</inlineHelpText>
        <label>Distribution List 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DistributionList2__c</fullName>
        <defaultValue>$Label.DistributionList2</defaultValue>
        <description>SFDC1-1895: Distribution list 2 to sent email alert</description>
        <inlineHelpText>Default mailing list to receive Alert emails if Distribution List 1 is not provided.</inlineHelpText>
        <label>Distribution List 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PKIDSurvResp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>SvR{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID SurvResp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Question10__c</fullName>
        <description>SFDC1-6010: text of questions - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Question 10</inlineHelpText>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <description>SFDC1-254 : text of questions - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Question 1</inlineHelpText>
        <label>Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <description>SFDC1-254 : text of questions - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Question 2</inlineHelpText>
        <label>Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response10__c</fullName>
        <description>SFDC1-6010: answer to question 10 - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Response  10</inlineHelpText>
        <label>Response 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response1__c</fullName>
        <description>SFDC1-6010: answer to question1 - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Response  1</inlineHelpText>
        <label>Response 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response2__c</fullName>
        <description>SFDC1-6010: answer to question 1 - can be null if not all 10 questions are asked</description>
        <inlineHelpText>Survey Response  2</inlineHelpText>
        <label>Response 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <description>SFDC1-254: Date on which survey was taken</description>
        <inlineHelpText>Date the survey response was received</inlineHelpText>
        <label>Response Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>SFDC1-254: Score given for the training provided/Customer satisfcation</description>
        <inlineHelpText>Calculated Overall Score.  This score is provided by the survey team.</inlineHelpText>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveySystemReference__c</fullName>
        <description>SFDC1-6010:Survey identifier from Survey system
SFDC1-9004 : Marking this field External and Unique</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique survey identifier provided by the survey tool</inlineHelpText>
        <label>Survey System Reference</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyType__c</fullName>
        <description>SFDC1-254: describes if the survey response is Customer Care,Training or Customer First</description>
        <inlineHelpText>Identifies the type of Survey that was sent to the Contact.</inlineHelpText>
        <label>Survey Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Customer First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyVersion__c</fullName>
        <inlineHelpText>This field will hold a version number determined by the survey team to identify the survey questions used</inlineHelpText>
        <label>Survey Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-254: populated and required when the type=Training, else null and read only</description>
        <inlineHelpText>Training Activity related to this Survey Response.</inlineHelpText>
        <label>Training</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SurveyType__c</columns>
        <columns>ResponseDate__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Training__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AlertCommentsShouldNotBeNull</fullName>
        <active>true</active>
        <description>SFDC1-6010: If alert status is resolved, the alert comments may not be null</description>
        <errorConditionFormula>AND( 
	ISPICKVAL( AlertStatus__c , &quot;Resolved&quot;), 
	ISBLANK( AlertComments__c ))</errorConditionFormula>
        <errorDisplayField>AlertComments__c</errorDisplayField>
        <errorMessage>If alert status is resolved, the alert comments may not be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AlertStatusIsRequired</fullName>
        <active>true</active>
        <description>SFDC1-6010: If Alert type is not null then alert status should be populated</description>
        <errorConditionFormula>AND( 
	NOT( 
		OR (
			ISPICKVAL( AlertType__c , &apos;Null&apos;),
			ISBLANK(TEXT( AlertType__c )))), 
	ISBLANK(TEXT( AlertStatus__c )))</errorConditionFormula>
        <errorDisplayField>AlertStatus__c</errorDisplayField>
        <errorMessage>If Alert type is not null then alert status should be populated</errorMessage>
    </validationRules>
</CustomObject>